--- a/contact-me.html
+++ b/contact-me.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css"
 </head>
-
 <body>
   <h1>My Contact Details</h1>
   <p>40 Winfield Ave Jersey City, NJ 07305</p>
