--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <head>
   <meta charset="utf-8">
   <title>Paul's Nicholas Soto Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css"
+
 </head>
 
-<body>
+  <body>
   <table cellspacing="20">
     <tr>
-    <td><img src="IT Profile Pic.jpg" alt="Paul's profile picture"></td>
-    <td><h1>Paul Nicholas Soto</h1>
-      <p><em>Welcome To My <strong>Official Website</strong>.</em></p>
-      <p>I am an IOS and Web Developer. I love coffee and learning new stuff daily about Information Technology(IT).</p>
-      <hr></td>
+      <td><img src="IT Profile Pic.jpg" alt="Paul's profile picture"></td>
+      <td>
+        <h1>Paul Nicholas Soto</h1>
+        <p><em>Welcome To My <strong>Official Website</strong>.</em></p>
+        <p>I am an IOS and Web Developer. I love coffee and learning new stuff daily about Information Technology(IT).</p>
+        <hr>
+      </td>
     </tr>
   </table>
 
@@ -25,38 +29,38 @@
   <hr>
   <h3>Work Experience</h3>
   <table border="10">
-  </thead>
-  <tr>
-  <th>Dates</th>
-  <th>Work</th>
-</tr>
-</thead>
-<tr>
-    <td>2022</td>
-    <td>Developer at Tempo App</td>
-  </tr>
-  <tr>
-    <td>2022</td>
-    <td>CS50 at Harvard University</td>
-  </tr>
-  </tbody>
+    </thead>
+    <tr>
+      <th>Dates</th>
+      <th>Work</th>
+    </tr>
+    </thead>
+    <tr>
+      <td>2022</td>
+      <td>Developer at Tempo App</td>
+    </tr>
+    <tr>
+      <td>2022</td>
+      <td>CS50 at Harvard University</td>
+    </tr>
+    </tbody>
   </table>
   <hr>
   <h3>Skills</h3>
-        <table>
-          <tr>
-            <td>IOS Development</td>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
-          </tr>
-          <tr>
-            <td>Web Development</td>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
-          </tr>
-          <tr>
-            <td>Photography</td>
-            <td>⭐️⭐️</td>
-          </tr>
-        </table>
+  <table>
+    <tr>
+      <td>IOS Development</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>Web Development</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>Photography</td>
+      <td>⭐️⭐️</td>
+    </tr>
+  </table>
   <hr>
   <a href="hobbies.html">My Hobbies</a>
   <a href="contact-me.html">My Contact Details</a>
